--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 ><input type="button" value="Check" id="checkbutton"
    title="Check for mistakes."
 ><input type="button" value="&laquo; Prev" id="prevbutton"
-   title="Previous puzzle.  Ctrl to go back 10."
+   title="Previous puzzle."
 ><input type="button" value="Next &raquo;" id="nextbutton"
-   title="Next puzzle.  Ctrl to go forward 10."
+   title="Next puzzle."
 >
 </center>
 </td>
