--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 ><input type="button" value="Next &raquo;" id="nextbutton"
    title="Next puzzle."
 >
+<p id="bottomtext"></p>
 </center>
 </td>
 <td id="rightlayout">
