Rearrange code, improve comments.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="algorithm.js"></script>
 <script src="hintmaker.js"></script>
 <script src="interface.js"></script>
+<!-- Remove this script to disable logging -->
 <script src="logging.js"></script>
 </head>
 <body>
